--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body {
+    font-family: 'Lato';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    background: #4ec5a5;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.name {
+    font-size: 36px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.name:hover {
+    color: #fff;
+    text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+    font-size: 20px;
+    color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav:hover {
+    color: #000;
+    text-decoration: none;
+}
+
+.title {
+    font-size: 20px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.description {
+    text-align: center;
 }
